[project]
name = "authless-fastmcp-server"
version = "0.1.0"
description = "A simple MCP server with a basic weather tool"
authors = [{name = "Gabriel", email = "gabriel@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=1.0.0",
]

[project.scripts]
weather-mcp = "authless_fastmcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
